--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div>
       <img src="/img/Icon.svg" alt="alerte" />
       <span class="alerte">
-        <h1>Attention! Site glissant.</h1>
+        <h1><strong>Attention! </strong>Site glissant.</h1>
         <p>Ne scrollez pas trop vite.</p>
       </span>
     </div>
